A base for the API
- Separate config for the tado variables
- User model with API authentication
- Controller with authentication for the tado API calls
- Front-end login view and css
- To do list
- And probably some more I forgot to mention

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,11 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
+TADO_API_URL=https://my.tado.com/api/v2
+TADO_CLIENT_ID=tado-web-app
+TADO_CLIENT_SECRET=
+TADO_SCOPE=home.user
+
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
